[tool.poetry]
name = "action-tracker"
version = "0.1.0"
description = ""
authors = ["Rachit Sengupta <rachit_sengupta@intuit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-contrib-python = ">=4.8.0,<4.10.0"
mediapipe = "^0.10.21"
torch = "^2.7.1"
torchvision = "^0.22.1"
torchaudio = "^2.7.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
transformers = "^4.53.3"
accelerate = "^1.9.0"
huggingface-hub = "^0.33.5"
jupyter = "^1.1.1"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
